{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 40,
  "lineage": "3bd8d4fd-d690-767f-71e2-bed8c6fce756",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Kura6_Docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:717491011807:instance/i-06cce399b8902acf0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06cce399b8902acf0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ktest",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-081c62f094688aee2",
            "private_dns": "ip-172-20-34-182.ec2.internal",
            "private_ip": "172.20.34.182",
            "public_ip": "100.26.121.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bbe052e0e6afdb63",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc5604ecb94bcee3",
            "tags": {
              "Name": "Kura6_Docker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07fdf196e5945820f"
            ]
          },
          "dependencies": [
            "aws_security_group.Kura6_Security",
            "aws_subnet.Kura6_SUBNET",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Kura6_Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:717491011807:instance/i-032cd0a06dfc7b6ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032cd0a06dfc7b6ef",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ktest",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0afbfe38fed509f0e",
            "private_dns": "ip-172-20-61-97.ec2.internal",
            "private_ip": "172.20.61.97",
            "public_ip": "54.236.27.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06bbf2562dc37bdb2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc5604ecb94bcee3",
            "tags": {
              "Name": "Kura6_Jenkins"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07fdf196e5945820f"
            ]
          },
          "dependencies": [
            "aws_security_group.Kura6_Security",
            "aws_subnet.Kura6_SUBNET",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Kura6_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08c40ec9ead489470",
            "arn": "arn:aws:ec2:us-east-1:717491011807:instance/i-052ca28ff727c07db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052ca28ff727c07db",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Ktest",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-038fc2876c9f1a713",
            "private_dns": "ip-172-20-14-203.ec2.internal",
            "private_ip": "172.20.14.203",
            "public_ip": "100.25.177.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-047f60903c3216a85",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc5604ecb94bcee3",
            "tags": {
              "Name": "Kura6_Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07fdf196e5945820f"
            ]
          },
          "dependencies": [
            "aws_security_group.Kura6_Security",
            "aws_subnet.Kura6_SUBNET",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Kura6_GATEWAY",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:internet-gateway/igw-02ec189de9afff925",
            "id": "igw-02ec189de9afff925",
            "owner_id": "717491011807",
            "vpc_id": "vpc-0f45e5312cbe156b2"
          },
          "dependencies": [
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Kura6_ROUTE",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-019e567730a234849",
            "owner_id": "717491011807",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ec189de9afff925",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0f45e5312cbe156b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Kura6_GATEWAY",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Kura6_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a00dba8b3665723b",
            "route_table_id": "rtb-019e567730a234849",
            "subnet_id": "subnet-0cc5604ecb94bcee3"
          },
          "dependencies": [
            "aws_internet_gateway.Kura6_GATEWAY",
            "aws_route_table.Kura6_ROUTE",
            "aws_subnet.Kura6_SUBNET",
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Kura6_Security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:security-group/sg-07fdf196e5945820f",
            "description": "Security group to open certain ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fdf196e5945820f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Kura6_Security",
            "name_prefix": "",
            "owner_id": "717491011807",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0f45e5312cbe156b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Kura6_SUBNET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:subnet/subnet-0cc5604ecb94bcee3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.20.0.0/18",
            "id": "subnet-0cc5604ecb94bcee3",
            "map_public_ip_on_launch": true,
            "owner_id": "717491011807",
            "tags": {
              "Name": "Kura6_SUBNET"
            },
            "vpc_id": "vpc-0f45e5312cbe156b2"
          },
          "dependencies": [
            "aws_vpc.Kura6_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Kura6_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:vpc/vpc-0f45e5312cbe156b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-057ce2f8795f9ae12",
            "default_route_table_id": "rtb-01e5d1262ff052743",
            "default_security_group_id": "sg-0e40532debd89b4a5",
            "dhcp_options_id": "dopt-09a1a2cfebdb7d57f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f45e5312cbe156b2",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01e5d1262ff052743",
            "owner_id": "717491011807",
            "tags": {
              "Name": "Kura6_VPC"
            }
          }
        }
      ]
    }
  ]
}